heading and bot

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>SaeedGPT</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -92,7 +92,7 @@
     </center>
     <script
       src="https://app.activebot.io/js/chat_plugin.js"
-      data-bot-id="7440"
+      data-bot-id="14006"
     ></script>
   </body>
 </html>
